[package]
name = "auto_mount"
version = "0.1.3"
edition = "2021"
authors = ["shalom <ski0090@naver.com>"]
rust-version = "1.63"
license-file = "LICENSE"
keywords = ["device", "mount", "disk", "ubuntu"]
description = "auto_mount has a function that automatically mounts a newly inserted device as a gpt partition."
repository = "https://github.com/ski0090/auto_mount"
documentation = "https://docs.rs/auto_mount"
readme = "ReadMe.md"
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
sysinfo = "0.25"
