[package]
name = "auto_mount"
version = "0.2.0"
edition = "2021"
authors = ["shalom <ski0090@naver.com>"]
rust-version = "1.63"
license-file = "LICENSE"
keywords = ["mount", "filesystem", "disk", "sata", "gpt"]
description = "Safe and intelligent Rust library for automatic SATA device mounting with smart GPT conversion, comprehensive error handling, and backup mechanisms."
repository = "https://github.com/ski0090/auto_mount"
documentation = "https://docs.rs/auto_mount"
readme = "ReadMe.md"
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37"
thiserror = "2.0.16"
